# PRG2-HEIG

./: .gitignore  CMakeLists.txt  README.md  fgets.c
Chap1/: ex1_1.c  ex1_10.c  ex1_11.c  ex1_12.c  ex1_13.c  ex1_2.c  ex1_3.c  ex1_5.c  ex1_6.c  ex1_7.c  ex1_8.c
Chap2/: ex2_1.c  ex2_12.c  ex2_14.c  ex2_15.c  ex2_16.c  ex2_18.c  ex2_19.c  ex2_2.c  ex2_21.c  ex2_22.c  ex2_23.c  ex2_7.c  ex2_8.c
Chap3/: ex3_1.c  ex3_10.c  ex3_2.c  ex3_3.c  ex3_4.c  ex3_5.c  ex3_6.c  ex3_8.c  ex3_9.c
Chap4/: ex4_2.c  ex4_3.c  ex4_4.c  ex4_5.c  ex4_8.c  ex4_9.c
Chap5/: ex5_1.c  ex5_2.c  ex5_3.c  ex5_4.c  personnes.txt
old_test_exercises/: correction_ex5_TE1.c  question5_3_TE2_21-22.c  question5_TE2_20-21.c
